--- a/src/wp-content/themes/zippy-elementor-child/assets/sass/_customize.scss
+++ b/src/wp-content/themes/zippy-elementor-child/assets/sass/_customize.scss
@@ -22,3 +22,18 @@ body {
 .added_to_cart {
   display: none !important;
 }
+.widget_wpc_filters_widget {
+  .wpc-see-more-btn {
+    text-decoration: underline !important;
+    background: none !important;
+    padding: 0px;
+    border: none;
+    color: var(--e-global-color-primary) !important;
+    font-size: 14px;
+    &:hover {
+      cursor: pointer;
+      color: var(--e-global-color-primary);
+      text-decoration: underline !important;
+    }
+  }
+}
